test/files/neg/t8325-c.scala

trait Test {
  def k(xx: Int`*`) = ???
}
