test/files/neg/t8325-c.check
t8325-c.scala:3: error: identifier expected but ')' found.
  def k(xx: Int`*`) = ???
                  ^
t8325-c.scala:4: error: ')' expected but '}' found.
}
^
two errors found
